--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;700&family=Barlow:wght@300;400;700&family=Bellefair&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+    color:#ffffff;
+    font-family: "Bellefair", serif;
+  }
+  /* font-family: 'Barlow', sans-serif;
+font-family: 'Barlow Condensed', sans-serif;
+font-family: 'Bellefair', serif; */
 
 a {
   color: inherit;
   text-decoration: none;
 }
+html {
+  font-size: 62.5%;
+}
+p {
+  padding: 0;
+  margin: 0;
+}
 
 * {
   box-sizing: border-box;
+}
+
+.container {
+  display: grid;
+  width: 90%;
+  margin:auto;
+  margin-top: 6rem;
+  grid-template-columns: 50% 50%;
+}
+
+.nav-active {
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.title {
+  margin:auto;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-weight: 300;
+  letter-spacing: 10px;
+  text-align: left;
+  padding-left: 8rem;
+  text-transform: uppercase;
+  
+}
+
+.title span {
+  font-weight: bold;
+  color: #474851; 
+  font-size: 2.3rem;
 }
