--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -4,33 +4,26 @@
      background-position: center;
      background-size: cover;
      min-height: 100vh;
+    
 }
 
-.crew ul {
-    display: flex;
-    justify-content: space-between;
-    width: 20rem;
-}
-
-.crew ul li {
-    list-style: none;
-    width: 1rem;
-    height:1rem;
-    background: white;
-    border-radius: 50%;
+.crew section {
+    text-align: start;
+    padding-left: 8rem;
 }
 
 .role {
+    padding-top: 10rem;
     font-size: 3rem;
     font-weight: lighter;
-    color: #dbdee2;
+ 
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-left: 1rem;
+    color: #86878a; 
 }
 
 .name {
-    font-size:4.5rem;
+    font-size:5.6rem;
 }
 
 .description {
@@ -43,3 +36,58 @@
   line-height: 1.5;
 }
 
+
+.crew ul {
+    display: flex;
+    justify-content: space-between;
+    width: 15rem;
+    padding:0px;
+}
+
+.crew ul li {
+    list-style: none;
+    width: 1.5rem;
+    height:1.5rem;
+    background: rgb(180, 176, 176);
+    opacity: 0.5;
+    border-radius: 50%;
+    transition: all 0.5s ease;
+}
+.crew ul li:hover {
+    cursor: pointer;
+}
+
+.crew .active {
+    background: white;
+    opacity: 1;
+}
+
+.containerImg {
+    width: 50rem; 
+    height: 46rem;
+    overflow: hidden;
+    margin-top: 10rem;
+    right: 20rem;
+    position: absolute;
+    overflow: hidden;
+    /* height: 40rem;
+    */
+}
+
+.containerImg img {
+    width: 100%;
+    
+}
+
+.carousel {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    overflow-x: hidden;
+}
+
+.carouselActive {
+    z-index: 1;
+    background:red;
+}
