--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -41,7 +41,10 @@
     display: flex;
     justify-content: space-between;
     width: 15rem;
-    padding:0px;
+    position: absolute;
+    z-index: 1000;
+    bottom: 10rem;
+    left: 14rem;
 }
 
 .crew ul li {
@@ -52,10 +55,10 @@
     opacity: 0.5;
     border-radius: 50%;
     transition: all 0.5s ease;
-}
-.crew ul li:hover {
     cursor: pointer;
+
 }
+
 
 .crew .active {
     background: white;
@@ -68,8 +71,8 @@
     overflow: hidden;
     margin-top: 10rem;
     right: 20rem;
-    position: absolute;
-    overflow: hidden;
+    /* position: absolute;
+    overflow: hidden; */
     /* height: 40rem;
     */
 }
@@ -78,16 +81,30 @@
     width: 100%;
     
 }
+.card {
+   
+    width: 100%;
+    padding-left: 10rem;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 0px 10rem;
+    padding-top: 10rem;
+    grid-gap: 15rem;
+    opacity: 0;
+    transition: all ease-in 0.5s;
+    transform: translateX(0);
+}
 
 .carousel {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
     display: flex;
-    overflow-x: hidden;
+    flex-direction: row;
+    justify-content: space-between;
+    overflow: hidden;
+    
 }
 
 .carouselActive {
     z-index: 1;
-    background:red;
+    opacity: 1;
 }
+
