--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -10,12 +10,21 @@
     padding-left: 5rem;
     font-family: 'Barlow Condensed', sans-serif;
 }
- 
+ @media screen and (max-width: 950px) {
+    .header {
+        top: 0;
+    }
+    .header > span{
+        display: none;
+    }
+     
+ }
 
 .header > span {
     border-bottom: 1px solid #777777; 
-    position: absolute;
+    position: absolute;    
     width:50rem;
     left: 15rem;
     z-index: 2;
+   
 }
