--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -1,7 +1,6 @@
 .main {
     position: relative;
     top: 0;
-
 }
 
 .container {
@@ -12,8 +11,21 @@
     justify-content: space-between;
     align-items: center;
    color: #EEEEEF  ;
-  
 }
+
+@media screen and (max-width: 950px) {
+   
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10rem;
+        text-align: center;
+       
+    }
+}
+    
+
 
 .title {
     font-size: 3rem;
@@ -32,3 +44,13 @@
     font-weight: 300;
     font-family: 'Barlow', sans-serif;
 }
+
+@media screen and (max-width: 950px) {
+    .text {
+        margin: auto;
+        width: 44rem;
+        font-size: 1.8rem;
+        margin-bottom: 15rem;
+    }
+}
+    
