--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -10,6 +10,16 @@
     padding-left: 14rem;
    
 } 
+@media screen and (max-width: 950px) {
+    .nav {
+        width: 60%;
+        padding-left: 4rem;
+    }
+    .nav li a > span {
+       display: none;
+    }
+}
+   
 .nav li {
    list-style: none;
    height: 100%;
@@ -25,8 +35,6 @@
 .nav li:hover {
    border-bottom: 1px solid #f5f5f5;
 }
-
-
 
 .nav li a {
    text-decoration: none;
