--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,9 @@ p {
   grid-template-columns: 50% 50%;
 }
 
+
+
+
 .nav-active {
   border-bottom: 1px solid #f5f5f5;
 }
@@ -49,10 +52,20 @@ p {
   text-align: left;
   font-size: 2.8rem;
   text-transform: uppercase;
-  
 }
 
 .title span {
   font-weight: bold;
   color: #474851;  
+}
+
+
+@media screen and (max-width: 950px) {
+  .title {
+    position: absolute;
+    font-size: 2rem;
+    top: 15rem;
+    left: 8%;
+    letter-spacing: 5px;
+  }
 }
