--- a/styles/tech.module.css
+++ b/styles/tech.module.css
@@ -5,10 +5,43 @@
      background-size: cover;
      min-height: 100vh;
   }
+/* responsive table */
+@media screen and (max-width: 950px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-tablet.jpg");
+    }
+}
+
+  .container {
+    display: grid;
+    width: 90%;
+    margin:auto;
+    margin-top: 6rem;
+    grid-template-columns: 50% 50%;
+  }
+  
+  @media screen and (max-width: 950px) {
+    .container {
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      justify-content: center;
+    }  
+  }
+  
+  
 
  
   .tech section {
       padding-left: 10rem;
+  }
+
+  @media screen and (max-width: 950px) {
+    .tech section {
+      padding-left: 0;
+    }
+  
+      
   }
  
   .tech  ul {
@@ -36,7 +69,20 @@
 
   .flex {
     margin-top: 10rem;
-      display: flex;
+    display: flex;
+  }
+
+  @media screen and (max-width: 950px) {
+    
+    .flex {
+      
+      flex-direction: column;
+  }
+      .tech ul {
+          flex-direction: row;
+          height: auto;
+          margin: auto;
+      }
   }
 
   .name {
@@ -60,6 +106,17 @@
       padding: 2rem 4rem;
   }
 
+  @media screen and (max-width: 950px) {
+      .containertext {
+          text-align: center;
+          padding-bottom: 10rem;
+      } 
+      .description {
+            padding-right: 0;
+      }
+  }
+
+
   .active {
       background: white;
       color:black;
@@ -67,10 +124,20 @@
 
   .containerImg {
         width: 40rem;
-        margin-top: 10rem;
-        margin-left: 36rem;
+        position: absolute;
+        right: 0;
+        top: 25rem;
+       
   }
 
  .containerImg img {
       width: 100%;
+  }
+
+  @media screen and (max-width: 950px) {
+      .containerImg {
+          position: static;
+          margin-top: 15rem;
+          width: 100%;
+      }
   }
