--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    color:#ffffff;
+    color: #CBD0F3;
     font-family: "Bellefair", serif;
   }
   /* font-family: 'Barlow', sans-serif;
@@ -68,4 +68,14 @@ p {
     left: 8%;
     letter-spacing: 5px;
   }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    position:static;
+    margin:auto;
+    width: 300px;
+    text-align: center;
+  }
+  
 }
