--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -7,6 +7,7 @@
     /* left:35px; */
     position: relative;
     top: 50px;
+    height: 10rem;
     padding-left: 5rem;
     font-family: 'Barlow Condensed', sans-serif;
 }
@@ -26,5 +27,4 @@
     width:50rem;
     left: 15rem;
     z-index: 2;
-   
 }
