--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -9,6 +9,7 @@
     justify-content: flex-start;
     padding-left: 14rem;
    
+
 } 
 @media screen and (max-width: 950px) {
     .nav {
@@ -19,7 +20,14 @@
        display: none;
     }
 }
-   
+
+@media screen and (max-width:750px){
+   .nav {
+      width: 80%;
+   }
+}
+
+
 .nav li {
    list-style: none;
    height: 100%;
@@ -30,8 +38,15 @@
    cursor: pointer;
    position: relative;
    z-index: 1;
-   
 }
+
+@media screen and (max-width:600px){
+   .nav li{
+      margin:0 1rem;
+   }
+}
+  
+
 .nav li:hover {
    border-bottom: 1px solid #f5f5f5;
 }
@@ -61,12 +76,43 @@ font-family: 'Bellefair', serif; */
    right: 0;
    bottom: 0;
    background: rgba(255, 255, 255, 0.055);
-   
    backdrop-filter: blur( 10px );
    -webkit-backdrop-filter: blur( 4.5px );
    z-index: 1;
 }
 
 
+/* reponsive movil */
 
+@media screen and (max-width: 500px) {
+   .nav {
+      padding: 0;
+      margin: 0;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 2rem;
+      width: 50%;
+      position: fixed;
+      height: 100%;
+      top: 0;
+      right: 0;
+      z-index: 100;
+      transition: all  0.3s ease;
+      transform: translateX(100%);
+   }
+    .nav li{
+       height: 5rem;
+       
+    }
+    .nav li a span {
+      display: block;
+    }
+    .nav::before {
+      backdrop-filter: blur( 2rem );
+      -webkit-backdrop-filter: blur( 400px );
+    }
+}
 
+.navActive {
+   transform: translateX(0px);
+}
