--- a/styles/tech.module.css
+++ b/styles/tech.module.css
@@ -12,6 +12,13 @@
     }
 }
 
+@media screen and (max-width: 500px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-mobile.jpg");
+    }
+  
+}
+
   .container {
     display: grid;
     width: 90%;
@@ -28,9 +35,18 @@
       justify-content: center;
     }  
   }
-  
-  
 
+  @media screen and (max-width: 500px) {
+    .container {
+      margin-top: 1rem;
+    }
+    .container h1 {
+      position:absolute;
+      top:10rem;
+      left: 0;
+      right: 0;
+    }
+  }
  
   .tech section {
       padding-left: 10rem;
@@ -39,10 +55,10 @@
   @media screen and (max-width: 950px) {
     .tech section {
       padding-left: 0;
-    }
-  
-      
+    }    
   }
+
+ 
  
   .tech  ul {
     list-style: none;
@@ -72,10 +88,8 @@
     display: flex;
   }
 
-  @media screen and (max-width: 950px) {
-    
+@media screen and (max-width: 950px) {  
     .flex {
-      
       flex-direction: column;
   }
       .tech ul {
@@ -84,6 +98,22 @@
           margin: auto;
       }
   }
+
+  @media screen and (max-width: 500px) {
+    .flex {
+      flex-direction: column;
+  }
+      .tech ul li{
+          flex-direction: row;
+          height: 60px;
+          width: 60px;
+          margin: auto;
+          font-size: 2.5rem;
+      }
+    
+  }
+
+
 
   .name {
       font-size: 5rem;
@@ -106,6 +136,7 @@
       padding: 2rem 4rem;
   }
 
+
   @media screen and (max-width: 950px) {
       .containertext {
           text-align: center;
@@ -115,6 +146,21 @@
             padding-right: 0;
       }
   }
+
+  @media screen and (max-width: 500px) {
+    .flex {
+      margin-top: 1rem;
+    }    
+    .name{
+      font-size: 2.5rem;
+    }
+    .containertext {
+      padding: 2rem 0px;
+      padding-bottom: 5rem;
+    }
+  }
+
+
 
 
   .active {
@@ -139,5 +185,11 @@
           position: static;
           margin-top: 15rem;
           width: 100%;
+      }
+  }
+
+  @media screen and (max-width: 500px) {
+      .containerImg  {
+          margin-top: 6rem;
       }
   }
