--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,103 @@ p {
   box-sizing: border-box;
 }
 
+.home {
+  background-image: url("../public/assets/home/background-home-desktop.jpg");
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+   min-height: 100vh;
+}
+
+@media screen and (max-width: 950px) {
+  .home {
+    background-image: url("../public/assets/home/background-home-tablet.jpg");
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .home {
+    background-image: url("../public/assets/home/background-home-mobile.jpg");
+  }
+}
+
+
+ /* destination */
+.destination {
+  background-image: url("../public/assets/destination/background-destination-desktop.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+}
+
+@media screen and (max-width: 950px) {
+  .destination {
+    background-image: url("../public/assets/destination/background-destination-tablet.jpg");
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .destination {
+    background-image: url("../public/assets/destination/background-destination-mobile.jpg");
+  }
+}
+
+/* crew page background */
+.crew {
+  background-image: url("../public/assets/crew/background-crew-desktop.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+}
+
+@media screen and (max-width: 950px) {
+  .crew {
+    background-image: url("../public/assets/crew/background-crew-tablet.jpg");
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .crew {
+    background-image: url("../public/assets/crew/background-crew-mobile.jpg");
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .crew {
+    background-image: url("../public/assets/crew/background-crew-mobile.jpg");
+  }
+    
+}
+
+
+
+
+/*  tech background 
+ */
+.tech {
+    background-image: url("../public/assets/technology/background-technology-desktop.jpg");
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
+     min-height: 100vh;
+  }
+/* responsive table */
+@media screen and (max-width: 950px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-tablet.jpg");
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-mobile.jpg");
+    }
+  
+}
+
+
 .container {
   display: grid;
   width: 90%;
