--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -2,31 +2,14 @@
     font-size: 1.6rem;
     color: white;
     display: flex;
-    position: relative;
+    position: absolute;
     height: 10rem;
+    right: 0;
     width: 90rem;
     align-items: center;
     justify-content: flex-start;
     padding-left: 14rem;
-   
-
 } 
-@media screen and (max-width: 950px) {
-    .nav {
-        width: 60%;
-        padding-left: 4rem;
-    }
-    .nav li a > span {
-       display: none;
-    }
-}
-
-@media screen and (max-width:750px){
-   .nav {
-      width: 80%;
-   }
-}
-
 
 .nav li {
    list-style: none;
@@ -38,34 +21,31 @@
    cursor: pointer;
    position: relative;
    z-index: 1;
-}
-
-@media screen and (max-width:600px){
-   .nav li{
-      margin:0 1rem;
-   }
+   
 }
   
-
 .nav li:hover {
-   border-bottom: 1px solid #f5f5f5;
+   /* border-bottom: 1px solid #f5f5f5; */
+   text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 40px;
 }
 
 .nav li a {
    text-decoration: none;
    color: #dbdee2;
-   display: flex;
-   letter-spacing: 1px;
+   display: inline-block;
+   letter-spacing: 2px;
    text-transform: uppercase;
    font-size: 1.6rem;
    font-weight: lighter;
+
 }
 /* font-family: 'Barlow Condensed', sans-serif;
 font-family: 'Bellefair', serif; */
 
 .nav li a span {
    font-weight: bold;
-   padding: 0 1rem;
 }
 
 .nav::before {
@@ -116,3 +96,36 @@ font-family: 'Bellefair', serif; */
 .navActive {
    transform: translateX(0px);
 }
+
+@media screen and (max-width: 950px) {
+    .nav {
+        width: 60%;
+        padding-left: 4rem;
+    }
+    .nav li a > span {
+       display: none;
+    }
+
+}
+
+@media screen and (max-width: 950px) {
+    .nav {
+        width: 60%;
+        padding-left: 4rem;
+        
+    }
+    .nav li a > span {
+       display: none;
+    }
+}
+
+
+@media screen and (max-width:768px){
+   .nav {
+      width: 75%;
+   }
+}
+
+
+
+
