--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ p {
 .home {
   background-image: url("../public/assets/home/background-home-desktop.jpg");
    background-repeat: no-repeat;
-   background-position: center;
+   background-position: top;
    background-size: cover;
    min-height: 100vh;
 }
@@ -54,7 +54,7 @@ p {
 .destination {
   background-image: url("../public/assets/destination/background-destination-desktop.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   min-height: 100vh;
 }
@@ -75,7 +75,7 @@ p {
 .crew {
   background-image: url("../public/assets/crew/background-crew-desktop.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   min-height: 100vh;
 }
@@ -107,7 +107,7 @@ p {
 .tech {
     background-image: url("../public/assets/technology/background-technology-desktop.jpg");
      background-repeat: no-repeat;
-     background-position: center;
+     background-position: top;
      background-size: cover;
      min-height: 100vh;
   }
@@ -138,14 +138,17 @@ p {
 
 
 .nav-active {
-  border-bottom: 1px solid #f5f5f5;
+   text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 40px;
+ 
 }
 
 .title {
   margin:auto;
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 300;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   text-align: left;
   font-size: 2.8rem;
   text-transform: uppercase;
