--- a/styles/tech.module.css
+++ b/styles/tech.module.css
@@ -1,177 +1,163 @@
+.container {
+  display: grid;
+  width: 90%;
+  margin: auto;
+  margin-top: 6rem;
+  grid-template-columns: 50% 50%;
+  padding-left: 10rem;
+}
+.tech section {
+  padding-left: 10rem;
+}
 
+.ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30rem;
+  height: 30rem;
+  padding: 0px;
+}
 
-  .container {
-    display: grid;
-    width: 90%;
-    margin:auto;
-    margin-top: 6rem;
-    grid-template-columns: 50% 50%;
-    padding-left: 10rem;
-  }
-  
-  @media screen and (max-width: 950px) {
-    .container {
-      display: flex;
-      flex-direction: column-reverse;
-      align-items: center;
-      justify-content: center;
-    }  
-  }
+.ul li {
+  border: 1px solid #dbdee2;
+  width: 8rem;
+  height: 8rem;
+  font-size: 3.5rem;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
 
-  @media screen and (max-width: 500px) {
-    .container {
-      margin-top: 1rem;
-    }
-    .container h1 {
-      position:absolute;
-      top:10rem;
-      left: 0;
-      right: 0;
-    }
+.flex {
+  margin-top: 10rem;
+  display: flex;
+}
+
+.name {
+  font-size: 5rem;
+  padding: 2rem 0px;
+  text-transform: uppercase;
+}
+
+.terminology {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+.description {
+  font-family: "Barlow", sans-serif;
+  font-size: 1.6rem;
+  padding-right: 5rem;
+  line-height: 2.5rem;
+}
+
+.containertext {
+  padding: 2rem 0px;
+  padding-left: 12rem;
+}
+
+.active {
+  background: white;
+  color: black;
+}
+
+.containerImg {
+  width: 40rem;
+  position: absolute;
+  right: 0;
+  top: 25rem;
+}
+
+.containerImg img {
+  width: 100%;
+}
+
+@media screen and (max-width: 950px) {
+  .containertext {
+    padding-left: 10px;
   }
- 
+}
+
+@media screen and (max-width: 768px) {
   .tech section {
-      padding-left: 10rem;
+    padding-left: 0;
   }
-
-  @media screen and (max-width: 950px) {
-    .tech section {
-      padding-left: 0;
-    }    
+  .containerImg {
+    position: static;
+    margin-top: 15rem;
+    width: 100%;
   }
-
- 
- 
-  .ul {
-    list-style: none;
+  .container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30rem;
-    height: 30rem;
-    padding: 0px;
-  }
-
-  .ul li {
-      border: 1px solid #dbdee2;
-      width: 8rem;
-      height: 8rem;
-      font-size: 3.5rem;
-      border-radius: 50%;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
   }
 
   .flex {
-    margin-top: 10rem;
-    display: flex;
+    flex-direction: column;
   }
-
-@media screen and (max-width: 950px) {  
-    .flex {
-      flex-direction: column;
+  .ul {
+    flex-direction: row;
+    height: auto;
+    margin: auto;
   }
-      .ul {
-          flex-direction: row;
-          height: auto;
-          margin: auto;
-      }
-  }
-
-  @media screen and (max-width: 500px) {
-    .flex {
-      flex-direction: column;
-  }
-      .ul li{
-          flex-direction: row;
-          height: 60px;
-          width: 60px;
-          margin: auto;
-          font-size: 2.5rem;
-      }
-    
-  }
-
-
-
-  .name {
-      font-size: 5rem;
-      padding:2rem 0px;
-      text-transform: uppercase;
-  }
-
-  .terminology {
-       font-size: 1.6rem;
-       text-transform: uppercase;
-  }
-
-  .description {
-      font-family: 'Barlow', sans-serif;
-      font-size: 1.6rem;
-      padding-right: 5rem;
-  }
-
   .containertext {
-      padding: 2rem 4rem;
+    text-align: center;
+    padding-bottom: 10rem;
   }
-
-
-  @media screen and (max-width: 950px) {
-      .containertext {
-          text-align: center;
-          padding-bottom: 10rem;
-      } 
-      .description {
-            padding-right: 0;
-      }
+  .description {
+    padding-right: 0;
   }
-
-  @media screen and (max-width: 500px) {
-    .flex {
-      margin-top: 1rem;
-    }    
-    .name{
-      font-size: 2.5rem;
-    }
-    .containertext {
-      padding: 2rem 0px;
-      padding-bottom: 5rem;
-    }
+ .flex {
+    margin-top: 0px;
   }
-
-
-
-
-  .active {
-      background: white;
-      color:black;
+  .container {
+    padding-left: 0px;
+    padding:0px 4rem;
   }
+   .containertext {
+    padding-left: 0px;
+   }
+}
 
-  .containerImg {
-        width: 40rem;
-        position: absolute;
-        right: 0;
-        top: 25rem;
-       
+@media screen and (max-width: 500px) {
+  .container {
+    margin-top: 1rem;
   }
+  .container h1 {
+    position: absolute;
+    top: 10rem;
+    left: 0;
+    right: 0;
+  }
+ .containerImg {
+    margin-top: 6rem;
+  }
+  .flex {
+    flex-direction: column;
+  }
+  .ul li {
+    flex-direction: row;
+    height: 60px;
+    width: 60px;
+    margin: auto;
+    font-size: 2.5rem;
+  }
+  .flex {
+    margin-top: 1rem;
+  }
+  .name {
+    font-size: 2.5rem;
+  }
+  .containertext {
+    padding: 2rem 0px;
+    padding-bottom: 5rem;
+  }
+}
 
- .containerImg img {
-      width: 100%;
-  }
-
-  @media screen and (max-width: 950px) {
-      .containerImg {
-          position: static;
-          margin-top: 15rem;
-          width: 100%;
-      }
-  }
-
-  @media screen and (max-width: 500px) {
-      .containerImg  {
-          margin-top: 6rem;
-      }
-  }
