--- a/styles/crew.module.css
+++ b/styles/crew.module.css
@@ -15,22 +15,11 @@
   color: #86878a;
 }
 
-@media screen and (max-width: 950px) {
-  .crew section {
-  
-    padding: 0;
-    text-align: center;
-  }
-  .crew section h1 {
-    top: 5rem;
-  }
-  .role {
-    padding-top: 2rem;
-  }
-}
+
 
 .name {
   font-size: 5.6rem;
+  color:white
 }
 
 .description {
@@ -43,25 +32,15 @@
   line-height: 1.5;
 }
 
-@media screen and (max-width: 950px) {
-  .description {
-    margin: auto;
-    width: 80%;
-    padding: 1rem;
-  }
-  .name {
-    padding: 1rem;
-  }
-}
 
 .ul {
   display: flex;
   justify-content: space-between;
   width: 15rem;
   position: absolute;
-  z-index: 1000;
-  bottom: 10rem;
+  z-index: 100;
   left: 14rem;
+  top:55rem;
 }
 
 .ul li {
@@ -80,31 +59,8 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 950px) {
-  .ul {
-    width: 25rem;
-    padding: 0;
-    justify-content: space-around;
-    left: 50%;
-    transform: translateX(-12.5rem);
-  }
-}
 
-@media screen and (max-width: 750px) {
-  .ul {
-    bottom: 15rem;
-  }
-}
 
-@media screen and (max-width: 500px) {
-  .ul {
-    bottom: 22.5rem;
-  }
-  .role {
-    font-size: 2rem;
-    padding-top: 3rem;
-  }
-}
 
 .containerImg {
   width: 50rem;
@@ -121,36 +77,6 @@
   width: 100%;
 }
 
-@media screen and (max-width: 950px) {
-  .containerImg {
-    margin: auto;
-    margin-top: 15rem;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .containerImg {
-    width: 20rem;
-    height: 25rem;
-    margin-top: 5rem;
-    text-align: center;
-  }
-  .containerImg img {
-      width: auto;
-      height: 20rem;
-
-  }
-  .name {
-    font-size: 3rem;
-  }
-  .crew section h1 {
-    position: absolute;
-    top: 0px;
-    left: 0;
-    right: 0;
-
-  }
-}
 
 .carouselItem {
   width: 100%;
@@ -165,37 +91,6 @@
   transform: translateX(0);
 }
 
-@media screen and (max-width: 950px) {
-  .carouselItem {
-    width: 100%;
-    padding: 0px;
-    grid-template-columns: 100%;
-    grid-gap: 1rem;
-  }
-
-  .carouselItem section {
-    padding-left: 0px;
-    margin-top: 10rem;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .carouselItem {
-    /* grid-template-columns: 100%;
-        grid-gap: 1rem; */
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    margin-top: 1rem;
-  }
-  .carouselItem section {
-    padding-left: 0px;
-    margin-top: 0px;
-    text-align: center;
-    padding-bottom: 5rem
-  }
-}
 
 .carouselItemActive {
   z-index: 1;
@@ -215,5 +110,100 @@
   .carousel {
     display: grid;
     grid-template-columns: 100% 100% 100% 100%;
+  }
+  .carouselItem {
+    width: 100%;
+    padding: 0px;
+    grid-template-columns: 100%;
+    grid-gap: 1rem;
+  }
+
+  .carouselItem section {
+    padding-left: 0px;
+    margin-top: 10rem;
+    text-align: center;
+    
+  }
+  .section {
+    padding: 0;
+    text-align: center;
+  }
+  .section h1 {
+    top: 5rem;
+  }
+  .role {
+    padding-top: 2rem;
+  }
+  .description {
+    margin: auto;
+    width: 80%;
+    padding: 1rem;
+  }
+  .name {
+    padding: 1rem;
+  }
+  .ul {
+    width: 25rem;
+    padding: 0;
+    justify-content: space-around;
+    left: 50%;
+    transform: translateX(-12.5rem);
+  }
+  .containerImg {
+    margin: auto;
+    margin-top: 15rem;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .ul {
+    top:50rem;
+    height: 3rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .ul {
+    top:40rem;
+    width: 15rem;
+    transform: translateX(-7.5rem);
+  }
+  .role {
+    font-size: 2rem;
+    padding-top: 3rem;
+  }
+ .carouselItem {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin-top: 1rem;
+  }
+  .carouselItem section {
+    padding-left: 0px;
+    margin-top: 0px;
+    text-align: center;
+    padding-bottom: 5rem
+  }
+  .containerImg {
+    width: 20rem;
+    height: 25rem;
+    margin-top: 5rem;
+    text-align: center;
+  }
+  .containerImg img {
+      width: auto;
+      height: 20rem;
+
+  }
+  .name {
+    font-size: 3rem;
+  }
+  .section h1 {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    right: 0;
+    
   }
 }
