--- a/styles/tech.module.css
+++ b/styles/tech.module.css
@@ -1,9 +1,33 @@
+
+.tech {
+    background-image: url("../public/assets/technology/background-technology-desktop.jpg");
+     background-repeat: no-repeat;
+     background-position: top;
+     background-size: cover;
+     min-height: 100vh;
+  }
+/* responsive table */
+@media screen and (max-width: 950px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-tablet.jpg");
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .tech {
+      background-image: url("../public/assets/technology/background-technology-mobile.jpg");
+    }
+  
+}
+
+
+
 .container {
   display: grid;
   width: 90%;
   margin: auto;
   margin-top: 6rem;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 60% 40%;
   padding-left: 10rem;
 }
 .tech section {
@@ -59,7 +83,8 @@
 
 .containertext {
   padding: 2rem 0px;
-  padding-left: 12rem;
+  padding-left: 12rem; 
+
 }
 
 .active {
